2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/Marker.java
	(readObject): Initialise listener list,
	* tests/org/jfree/chart/plot/junit/ValueMarkerTests.java
	(test1802195): New test method.

2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
	(linesVisible): Deprecated,
	(shapesVisible): Likewise,
	(shapesFilled): Likewise,
	(getLinesVisible): Likewise,
	(setLinesVisible(Boolean)): Likewise,
	(setLinesVisible(boolean)): Likewise,
	(getShapesVisible): Likewise,
	(setShapesVisible(Boolean)): Likewise,
	(setShapesVisible(boolean)): Likewise,
	(setUseOutlinePaint): Fire change event,
	(getShapesFilled): Deprecated,
	(setShapesFilled(Boolean)): Likewise,
	(setShapesFilled(boolean)): Likewise,
	(setSeriesShapesFilled): Fire change event,
	(setBaseShapesFilled): Likewise,
	(equals): Minor tidy up.

2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(paintComponent): Clear chart buffer before refreshing.

2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(zoomAroundAnchor): New field,
	(getZoomAroundAnchor): New method,
	(setZoomAroundAnchor): Likewise,
	(zoomInDomain): Use zoomAroundAnchor flag,
	(zoomInRange): Likewise,
	(zoomOutDomain): Likewise,
	(zoomOutRange): Likewise,
	* source/org/jfree/chart/plot/CategoryPlot.java
	(zoomDomainAxes(double, PlotRenderingInfo, Point2D, boolean)): New method,
	(zoomRangeAxes(double, PlotRenderingInfo, Point2D)): Delegate to new method,
	(zoomRangeAxes(double, PlotRenderingInfo, Point2D, boolean)): New method,
	* source/org/jfree/chart/plot/FastScatterPlot.java
	(zoomDomainAxes(double, PlotRenderingInfo, Point2D, boolean)): New method,
	(zoomRangeAxes(double, PlotRenderingInfo, Point2D, boolean)): Likewise,
	* source/org/jfree/chart/PolarPlot.java